--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.13", features = ["derive"] }
-bdk = { version = "0.23", default-features = false, features = ["all-keys"] }
+clap = { version = "4.1.2", features = ["derive"] }
+bdk = { version = "0.26", default-features = false, features = ["all-keys"] }
+base64 = "^0.21"
 rand = "0.8.5"
 serde_json = "1.0"
 log = "0.4"
